<resources>
    <string name="app_name">HW5.1</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="procent">%</string>
    <string name="delenie">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="result">=</string>
    <string name="next">NEXT</string>
    <string name="category">Category</string>
    <string name="free">free</string>
    <string name="btn_next">Next</string>
    <string name="participants">Participants</string>
    <string name="price">Price</string>
    <string name="accessebility">Accessebility</string>
    <string name="category_2">Category</string>
    <string name="accessebility_2">Accessebility</string>
    <string name="price_2">Price</string>
    <string-array name="choice_color">
        <item>Black</item>
        <item>White</item>
        <item>Gray</item>
    </string-array>
    <array name="initial_slider_values">
        <item>10.0</item>
        <item>50.0</item>
    </array>
</resources>